--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-server.port=8080
-spring.application.name=customer
+server.port=8090
+spring.application.name=order
 spring.datasource.url=jdbc:h2:mem:ecomdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.h2.console.enabled=true
 spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto: create
+spring.jpa.hibernate.ddl-auto: create-drop
 spring.jpa.hibernate.show-sql: true
 #spring.profiles.active=dev
