created fetch order method

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.h2.console.enabled=true
 spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto: create-drop
+spring.jpa.hibernate.ddl-auto: update
 spring.jpa.hibernate.show-sql: true
 #spring.profiles.active=dev
