--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,36 +1,25 @@
 # H2 Database Config
-server.port=8090
-spring.application.name=order
-spring.datasource.url=jdbc:h2:mem:ecomdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.h2.console.enabled=true
-spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto: update
-spring.jpa.hibernate.show-sql: true
+#server.port=8090
+#spring.application.name=order
+#spring.datasource.url=jdbc:h2:mem:ecomdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=sa
+#spring.h2.console.enabled=true
+#spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto: update
+#spring.jpa.hibernate.show-sql: true
 #spring.profiles.active=dev
 
 # My SQL DataBase Config
 
-#server.port=8090
-#spring.application.name=order
-#spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_database?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=Sports@123
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#
-##logging.level.org.hibernate=DEBUG
-#logging.level.org.hibernate.SQL=DEBUG
-#lomgging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#
-#logging.level.org.hibernate=TRACE
-#logging.level.org.springframework=DEBUG
-#logging.level.com.zaxxer.hikari=DEBUG
-
-
+server.port=8090
+spring.application.name=order
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommDB?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Sports@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.profiles.active=dev
