--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # H2 Database Config
 #server.port=8090
-#spring.application.name=order
+#spring.application.name=ecomOrder
 #spring.datasource.url=jdbc:h2:mem:ecomdb
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
@@ -14,8 +14,8 @@
 # My SQL DataBase Config
 
 server.port=8090
-spring.application.name=order
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommDB?useSSL=false&serverTimezone=UTC
+spring.application.name=ecomOrder
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommdb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Sports@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
