--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ecommdb?useSSL=false&serverTim
 spring.datasource.username=root
 spring.datasource.password=Sports@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.profiles.active=dev
+
