--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -1,11 +1,25 @@
+#server.port=8080
+#spring.application.name=customer
+#spring.datasource.url=jdbc:h2:mem:ecomdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=sa
+#spring.h2.console.enabled=true
+#spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto: create
+#spring.jpa.hibernate.show-sql: true
+##spring.profiles.active=dev
+
+
+# My SQL DataBase Config
+
 server.port=8080
-spring.application.name=customer
-spring.datasource.url=jdbc:h2:mem:ecomdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.h2.console.enabled=true
-spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto: create
-spring.jpa.hibernate.show-sql: true
-#spring.profiles.active=dev
+spring.application.name=ecomOrder
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommdb?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Sports@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
