Registered all microservice with Eureka server

--- a/EurekaClient/src/main/resources/application.properties
+++ b/EurekaClient/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=EurekaClient
 eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 server.port:8780
+eureka.instance.hostname=localhost
+
