--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -14,7 +14,7 @@
 # My SQL DataBase Config
 
 server.port=8080
-spring.application.name=ecomOrder
+spring.application.name=customer
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommdb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Sports@123
@@ -22,4 +22,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+eureka.instance.hostname=localhost
 
