--- a/EurekaClient/pom.xml
+++ b/EurekaClient/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.3.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.hm</groupId>
+	<groupId>com.brainstorm</groupId>
 	<artifactId>EurekaClient</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>EurekaClient</name>
