--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -22,4 +22,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+
 
