--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -22,7 +22,15 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#Eureka server  related Properties
 eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 eureka.instance.hostname=localhost
+#Circuitbreaker properties
+resilience4j.circuitbreaker.instances.customerService.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.customerService.sliding-window-size=10
+resilience4j.circuitbreaker.instances.customerService.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.customerService.wait-duration-in-open-state=5000
+
+customer.service.url=http://localhost:8080/api
 
 
