reverting the database properties form Aws rds to local

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -15,9 +15,9 @@
 
 server.port=8090
 spring.application.name=ecomOrder
-spring.datasource.url=jdbc:mysql://database-1.cfyitms2cq67.us-east-1.rds.amazonaws.com:3306/ecommdb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommdb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=0130Cs071058
+spring.datasource.password=Sports@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
