--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 eureka.instance.hostname=localhost
 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+
