Integration with AWS S3 service unable to test yet because of credentials issue . will resolve the cred issue and test it

--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -29,3 +29,10 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 
+cloud.aws.credentials.access-key =pushpendra.tri88@gmail.com
+cloud.aws.credentials.secret-key =0130Cs071058$$
+cloud.aws.region.static =ap-south-1
+cloud.aws.s3.bucket =firefoxshimano
+cloud.aws.stack.auto=false
+
+
