--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -18,6 +18,12 @@ spring.application.name=customer
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommdb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Sports@123
+
+# Changes Required for RDS
+#spring.datasource.url=jdbc:mysql://ecommdb.ctkecms0c9az.ap-south-1.rds.amazonaws.com:3306/ecommdb?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=LangPackage#58
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
