--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -19,6 +19,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ecommdb?useSSL=false&serverTim
 spring.datasource.username=root
 spring.datasource.password=Sports@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.leakDetectionThreshold=30000
+spring.datasource.hikari.minimumIdle=2
+spring.datasource.hikari.maximumPoolSize=30
+spring.datasource.hikari.idleTimeout=120000
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
