S3 AWS changes testing completedwith below properties

--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -62,6 +62,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<!--S3 AWS Dependency-->
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>s3</artifactId>
