--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -35,9 +35,11 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 
-cloud.aws.credentials.access-key =pushpendra.tri88@gmail.com
-cloud.aws.credentials.secret-key =0130Cs071058$$
-cloud.aws.region.static =ap-south-1
+# Changes to connect with AWS S3 Bucket.
+# Access key and Secret key have to be generated for AWS console
+cloud.aws.credentials.access-key =AKIA47CRVWFDWHVR3WHQ
+cloud.aws.credentials.secret-key =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
+cloud.aws.region.static =us-east-1
 cloud.aws.s3.bucket =firefoxshimano
 cloud.aws.stack.auto=false
 
