--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -28,8 +28,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #Eureka server  related Properties
-eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
-eureka.instance.hostname=localhost
+#eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+#eureka.instance.hostname=localhost
+eureka.client.enabled=false
+
 #Circuitbreaker properties
 resilience4j.circuitbreaker.instances.customerService.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.customerService.sliding-window-size=10
