--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -15,6 +15,7 @@
 
 server.port=8090
 spring.application.name=ecomOrder
+# DataBase Properties
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommdb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Sports@123
