--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -41,4 +41,6 @@ resilience4j.circuitbreaker.instances.customerService.wait-duration-in-open-stat
 
 customer.service.url=http://localhost:8080/api
 
+product.service.url=http://localhost:8070/api
+
 
