Kafka has been implemented. While customer creation message has been produced and publiced  and same recieved by consumer

--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -43,5 +43,10 @@ cloud.aws.credentials.secret-key =arCb6qWSbGT3cuuaLl/mAxhXjfQa7Lpf8nfik3Ms
 cloud.aws.region.static =us-east-1
 cloud.aws.s3.bucket =firefoxshimano
 cloud.aws.stack.auto=false
+cloud.aws.s3.access.enable =false
+
+## Kafka Implementation
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=my-group-id
 
 
