Kafka has been implemented order order service . will be triggered once order have been created.
Implemented Circuit breaker in Order service while order service calling product service

--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -45,7 +45,9 @@ cloud.aws.s3.bucket =firefoxshimano
 cloud.aws.stack.auto=false
 cloud.aws.s3.access.enable =false
 
+
 ## Kafka Implementation
+kafka.enable =true
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=my-group-id
 
