--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -43,4 +43,10 @@ customer.service.url=http://localhost:8080/api
 
 product.service.url=http://localhost:8070/api
 
+#Kafka Configuration
+kafka.enable =true
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=my-group-id
+
+
 
