--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -28,9 +28,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
-#eureka.instance.hostname=localhost
-eureka.client.enabled=false
+
+#Eureka Client Configuration
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+eureka.client.enabled=true
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
