Changes - Properties to YML Tested spring Boot Profile

--- a/EurekaServer/src/main/resources/application.properties
+++ b/EurekaServer/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=EurekaServer
 eureka.client.registerWithEureka = false
 eureka.client.fetchRegistry = false
 server.port = 8761
+
+
+management.endpoint.health.probes.enabled=true
+management.endpoints.web.exposure.include=*
+management.health.liveness-state.enabled=true
+management.health.readiness-state.enabled=true
+spring.config.import=optional:configserver:http://localhost:8071/
