Entity changes from custom generator to UUID

--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -44,10 +44,12 @@ resilience4j:
   circuitbreaker:
     instances:
       customerService:
-        failure-rate-threshold: 50
-        sliding-window-size: 10
-        permitted-number-of-calls-in-half-open-state: 3
-        wait-duration-in-open-state: 5000
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        failureRateThreshold: 50
+        waitDurationInOpenState: 10000  # time in milliseconds
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
 customer:
   service:
     url: http://localhost:8080/api
@@ -55,7 +57,7 @@ product:
   service:
     url: http://localhost:8070/api
 kafka:
-  enable: true
+  enable: false
 
 
 
