1. Creates separate microservice for Order Consumer and Customer Consumer
2. API gateway implementation(Unable to call my service with API Gateway yet)

--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -52,10 +52,10 @@ resilience4j:
         automaticTransitionFromOpenToHalfOpenEnabled: true
 customer:
   service:
-    url: http://localhost:8080/api
+    url: http://localhost:8080/api/customers
 product:
   service:
-    url: http://localhost:8070/api
+    url: http://localhost:8070/api/products
 kafka:
   enable: false
 
