1. yml file changes for Kafka enabled
2. API gateway implementation correction on Pom.xml (able to call my service with API Gateway now)

--- a/apiGateway/src/main/resources/application.yml
+++ b/apiGateway/src/main/resources/application.yml
@@ -19,6 +19,6 @@ spring:
           enabled: true  # Enables dynamic routing using Eureka
       routes:
         - id: order-service
-          uri: lb://ECOMORDER
+          uri: lb://ECOMORDER  # Service name displays in Eureka server
           predicates:
             - Path=/api/orders/**
