--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -42,6 +42,8 @@ spring:
     bootstrap-servers: localhost:9092
     consumer:
       group-id: my-group-id
+    producer:
+      enabled: false
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
