--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -1,26 +1,3 @@
-cloud:
-  aws:
-    credentials:
-      access-key: AKIA47CRVWFDWHVR3WHQ
-      secret-key: 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
-    region:
-      static: us-east-1
-    s3:
-      access:
-        enable: false
-      bucket: firefoxshimano
-    stack:
-      auto: false
-eureka:
-  client:
-    enabled: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
-  instance:
-    hostname: localhost
-kafka:
-  enable: true
-
 server:
   port: 8080
 spring:
@@ -55,6 +32,36 @@ spring:
     active:
       - "prod"
 
+eureka:
+  client:
+    enabled: true
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    hostname:
+      preferIpAddress : true
+
+cloud:
+  aws:
+    credentials:
+      access-key: AKIA47CRVWFDWHVR3WHQ
+      secret-key: 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
+    region:
+      static: us-east-1
+    s3:
+      access:
+        enable: false
+      bucket: firefoxshimano
+    stack:
+      auto: false
+
+info:
+  app:
+    name: "customer"
+    description: "Brainstrom ecomm customer Application"
+    version: "1.0.0"
 
 build:
   version: "1.0"
@@ -67,3 +74,4 @@ customer:
   onCallSupport:
     - (555) 555-1234
     - (555) 523-1345
+
