--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -37,11 +37,15 @@ spring:
 
 eureka:
   client:
+    enabled: true
+    fetchRegistry: true
+    registerWithEureka: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
-    enabled: true
   instance:
-    hostname: localhost
+    hostname:
+      preferIpAddress: true
+
 resilience4j:
   circuitbreaker:
     instances:
@@ -59,7 +63,11 @@ product:
   service:
     url: http://localhost:8070/api/products
 
-
+info:
+  app:
+    name: "order"
+    description: "Brainstrom ecomm order Application"
+    version: "2.0.0"
 
 
 build:
