--- a/order/pom.xml
+++ b/order/pom.xml
@@ -73,6 +73,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream-binder-kafka</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
         <dependency>
             <groupId>com.brainstorm</groupId>
             <artifactId>product</artifactId>
