1. Correct way of using circuit breaker with Feign client while using other microservices inside one of microservices.
2. Postman url correction for API Gateway by adding Service name in URL

3. Change service name to lower case in URL

Old URL -http://localhost:8085/api/orders/createOrder

New URL - http://localhost:8085/ecomorder/api/orders/createOrder

--- a/apiGateway/src/main/resources/application.yml
+++ b/apiGateway/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
       discovery:
         locator:
           enabled: true  # Enables dynamic routing using Eureka
+          lowerCaseServiceId: true
       routes:
         - id: order-service
           uri: lb://ECOMORDER  # Service name displays in Eureka server
