1. Saga Pattern Implemented without test. All service has to configure properly and make it run. 2. Many Microservice is failing need to check

--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
     consumer:
       group-id: my-group-id
     producer:
-      enabled: false
+      enabled: true
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
