--- a/product/pom.xml
+++ b/product/pom.xml
@@ -59,6 +59,10 @@
 			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
