--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -24,7 +24,8 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: order_group
+      group-id: orders_group
+
     producer:
       enabled: false
   config:
