--- a/payment/src/main/resources/application.yml
+++ b/payment/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: payment_group
+      group-id: payments_group
     producer:
       enabled: false
 #  config:
