--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -24,7 +24,9 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: orders_group,reverse_orders_group
+      group-ids:
+        - orders_group
+        - reverse_orders_group
 
     producer:
       enabled: false
