--- a/payment/src/main/resources/application.yml
+++ b/payment/src/main/resources/application.yml
@@ -24,7 +24,9 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: payments_group, reverse_payments_group
+      group-ids:
+        - payments_group
+        - reverse_payments_group
     producer:
       enabled: false
 #  config:
