1. Logger Color Beautifying with multiple color 2. Added properties for custom username and password to provide security to API 3. Created security config to provide security to API by using Form Login where request mapping  is configured to be authenticated, Also mentioned Request mapping which do not need any security by using permitAll. 4. Disabled Form Login for API so these can be used br other services
5. Added controller method for get all customers from databases.

After applying the security  unable to call the post methods Need to check this.

--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+server:
+  port: 8071
+logging:
+  pattern:
+    console : ${LOGPATTERN_CONSOLE:%green(%d{YYYY-MM-dd HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 spring:
   application:
     name: "configserver"
@@ -35,5 +40,4 @@ management:
 encrypt:
   key: "45D81EC1EF61DF9AD8D3E5BB397F9"
 
-server:
-  port: 8071
+
