--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 server:
   port: 8081
+logging:
+  pattern:
+    console : ${LOGPATTERN_CONSOLE:%green(%d{YYYY-MM-dd HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 spring:
   application:
-    name: ecomOrder
+    name: ${SPRING_APP_NAME:ecomOrder}
   datasource:
     username: root
     password: Sports@123
