--- a/EurekaServer/src/main/resources/application.properties
+++ b/EurekaServer/src/main/resources/application.properties
@@ -3,6 +3,7 @@ eureka.client.registerWithEureka = false
 eureka.client.fetchRegistry = false
 server.port = 8761
 
+logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{YYYY-MM-dd HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 
 management.endpoint.health.probes.enabled=true
 management.endpoints.web.exposure.include=*
