--- a/apiGateway/src/main/resources/application.yml
+++ b/apiGateway/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 server:
   port: 8085
-
+logging:
+  pattern:
+    console : ${LOGPATTERN_CONSOLE:%green(%d{YYYY-MM-dd HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 spring:
   application:
-    name: api-gateway
-
+    name: ${SPRING_APP_NAME:api-gateway}
   eureka:
     client:
       service-url:
