--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 server:
   port: 8080
+logging:
+  pattern:
+    console : ${LOGPATTERN_CONSOLE:%green(%d{YYYY-MM-dd HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 spring:
   application:
-    name: customer
+    name: ${SPRING_APP_NAME:customer}
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     password: Sports@123
@@ -31,6 +34,10 @@ spring:
   profiles:
     active:
       - "prod"
+  security:
+    user:
+      name: ${SECURITY_USERNAME:brainstorm}
+      password: ${SECURITY_PASSWORD:12345}
 
 eureka:
   client:
