--- a/payment/src/main/resources/application.yml
+++ b/payment/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 server:
   port: 8095
+logging:
+  pattern:
+    console : ${LOGPATTERN_CONSOLE:%green(%d{YYYY-MM-dd HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
+
 spring:
   application:
-    name: payment
+    name: ${SPRING_APP_NAME:payment}
   datasource:
     username: root
     password: Sports@123
