--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 server:
   port: 8070
-
+logging:
+  pattern:
+    console : ${LOGPATTERN_CONSOLE:%green(%d{YYYY-MM-dd HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 spring:
   application:
-    name: product
+    name: ${SPRING_APP_NAME:product}
   datasource:
     username: root
     password: Sports@123
