--- a/payment/pom.xml
+++ b/payment/pom.xml
@@ -87,6 +87,11 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.17.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
