1.Disabling Kafka producer to notify about customer creation 2. Changed customer to Address relationship from M : M to O : M 3. some refactoration 4. used Native query to fetch the data from Address Repository

--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
     consumer:
       group-id: my-group-id
     producer:
-      enabled: true
+      enabled: false
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
