--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -70,7 +70,16 @@
 		<dependency>
 		<groupId>org.springframework.kafka</groupId>
 		<artifactId>spring-kafka</artifactId>
-	</dependency>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
