--- a/order/pom.xml
+++ b/order/pom.xml
@@ -53,7 +53,7 @@
 		</dependency>
         <dependency>
             <groupId>com.brainstorm</groupId>
-            <artifactId>customer</artifactId>
+            <artifactId>Customer</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
@@ -79,7 +79,7 @@
 		</dependency>
         <dependency>
             <groupId>com.brainstorm</groupId>
-            <artifactId>product</artifactId>
+            <artifactId>Product</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
